fix: improve context search input focus contrast

--- a/assets/sass/bulma/components/context-menu.sass
+++ b/assets/sass/bulma/components/context-menu.sass
@@ -33,4 +33,7 @@
 
     &:focus 
       background: $white
-
+      color: $black
+      &::placeholder
+        color: $dark1
+        opacity: 0.7
